--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.7.9",
     "element-plus": "^2.9.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
