--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.9.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
