--- a/ecommerce-backend/Gemfile
+++ b/ecommerce-backend/Gemfile
@@ -28,10 +28,11 @@ gem "bootsnap", require: false
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
 gem "rack-cors"
-gem 'devise'
-gem 'devise-jwt'
-gem 'jsonapi-serializer'
-gem 'kaminari'
+gem "devise"
+gem "devise-jwt"
+gem "jsonapi-serializer"
+gem "kaminari"
+gem "aasm"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
