rocket🚀:/ 先尝试部署到服务器上

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 test-project:
   stage: test
   script:
-    - cd project
+    - cd ecommerce-backend
     - bundle install
     - rails db:migrate RAILS_ENV=test
     - PARALLEL_WORKERS=1 rails test
