rocket🚀:/ 先尝试部署到服务器上

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ test-project:
 deploy-project:
   stage: deploy
   script:
-    - rsync -arv --delete  --exclude="*.sqlite3" ./project /
+    - rsync -arv --delete  --exclude="*.sqlite3" ./ecommerce-backend /
     - cd /ecommerce-frontend
     - npm install
     - npm run dev
