rocket🚀:/ 先尝试部署到服务器上11

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ deploy-project:
   stage: deploy
   script:
     - rsync -arv --delete  --exclude="*.sqlite3" ./ecommerce-backend /
+    - rsync -arv --delete  --exclude="*.sqlite3" ./ecommerce-frontend /
     - cd /ecommerce-frontend
     - npm install
     - npm run dev
