--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -37,6 +37,7 @@
     "npm-run-all2": "^7.0.1",
     "oxlint": "^0.11.0",
     "prettier": "^3.3.3",
+    "terser": "^5.37.0",
     "typescript": "~5.6.3",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
