test🚦:/ 测试服务器部署 * 6

--- a/ecommerce-backend/.gitignore
+++ b/ecommerce-backend/.gitignore
@@ -35,8 +35,8 @@
 /config/credentials/production.key
 
 # backend/.gitignore
-/public/assets
-/public/index.html
-/public/manifest.json
-/public/robots.txt
-/public/assets/*
+#/public/assets
+#/public/index.html
+#/public/manifest.json
+#/public/robots.txt
+#/public/assets/*
