test🚦:/ 测试服务器部署 * 7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ deploy-project:
     - bundle install
     - rails db:migrate
     - rails db:seed
+    - cp /ecommerce-backend /project
     - sv restart project
   only:
   - project
