--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ deploy-project:
     - bundle install
     - rails db:migrate
     - rails db:seed
-    - cp /ecommerce-backend /project
+    - cp -r /ecommerce-backend /project
     - sv restart project
   only:
   - project
